# swimmer

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  TODO.md  eslint.config.mjs  index.html  package-lock.json  package.json  vitest.config.ts
.cursor/rules/: 001-basic.mdc  002-architecture.mdc  100-frontend.mdc  200-backend.mdc
.github/: FUNDING.yml
.github/workflows/: ci.yml  lint-and-test.yml  release.yml
.serena/: project.yml
scripts/: bump-version.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: k8s_api.rs  lib.rs  main.rs  mock_client.rs  terminal.rs
src/api/: commands.ts  index.ts
src/chat/components/: ChatPane.tsx
src/chat/styles/: chatPane.css
src/cluster/components/: ClusterInfoPane.css  ClusterInfoPane.tsx  ClusterOperationPanelComponent.tsx  ClusterOverview.css  ClusterOverview.tsx  ClusterTabs.tsx  ResourceDetailPane.tsx  ResourceKindSidebar.tsx  (+4 more)
src/components/: ChatPane.tsx  ClusterInfoPane.tsx  ClusterTabs.tsx  ContextsPane.tsx  ErrorBoundary.tsx  MainLayout.tsx  TerminalPane.tsx  Toast.tsx
src/contexts/: PreferencesContext.tsx
src/lib/: configSchema.ts  constants.ts  contextTree.ts  favorite.ts  fs.ts  preferences.ts  tag.ts  utils.ts
src/main/: MainLayout.tsx  panelLogic.test.ts  panelLogic.ts  resizable.css
src/preferences/: PreferencesPage.tsx  preferencesPage.css
src/styles/: contexts-tree.css  layout.css
src/tests/: setup.js
src/utils/: contextTree.ts
(+21 files in other folders)
