[package]
name = "swimmer"
version = "0.1.5"
description = "A user-friendly Kubernetes GUI client for multi-cluster management"
authors = ["teru01"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swimmer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
portable-pty = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tauri-plugin-log = "2.7.1"
log = "0.4.28"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_yml = "0.0.12"
futures = "0.3"
dirs = "5"
which = "7"

